--- a/css/navbar.css
+++ b/css/navbar.css
@@ -29,7 +29,6 @@ a:hover {
 a.menu-link {
   float: right;
   display: block;
-  padding: 1em;
 }
 nav[role="navigation"] {
   clear: right;
@@ -59,7 +58,8 @@ nav[role="navigation"] li a {
 }
 .menu-link {
   height: 30px;
-  width: 33px;
+  width: 50px;
+  margin: 1em;
   cursor: pointer;
 }
 .bar1,
