--- a/css/style.css
+++ b/css/style.css
@@ -58,23 +58,26 @@ h2 {
 .button-group {
   display: flex;
   align-content: flex-start;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   vertical-align: middle;
   margin: 30px auto;
   padding: 20px;
+  margin-top: 10%;
 }
 
 .btn-filter {
-  margin-right: 5px;
-  padding: 10px 20px;
-  font-size: 16px;
+  margin-right: 15px;
+  padding: 10px 15px;
+  font-size: 14px;
   min-width: 100px;
   cursor: pointer;
   outline: none;
-  border: none;
   background-color: transparent;
   color: #555;
+  border: 1px solid #555;
+  border-radius: 1.5em;
 }
 .btn-filter:hover {
   background-color: #eee;
@@ -82,6 +85,7 @@ h2 {
 .btn-filter.active {
   background-color: black;
   color: #dcf0ef;
+  border: 1px solid white;
 }
 
 .wrap {
@@ -247,6 +251,7 @@ a:hover {
   display: flex;
   position: relative;
   z-index: 3;
+  top: 10%;
 }
 
 .square {
@@ -489,11 +494,14 @@ a:hover {
   }
   .button-group {
     padding: 0;
+    margin-top: 15%;
   }
   .btn-filter {
-    margin-right: 0;
+    margin-right: 5px;
+    top: 50px;
+    margin-top: 5%;
     padding: 5px 10px;
-    font-size: 0.5em;
+    font-size: 1em;
     min-width: 40px;
   }
   .info-wrapper {
