--- a/css/navbar.css
+++ b/css/navbar.css
@@ -208,3 +208,16 @@ p {
   border: 1px solid white;
 }
 /* Menu Bar */
+
+/*------------For mobile phones------------*/
+@media only screen and (max-width: 620px) {
+  #logo {
+    width: 50px;
+    height: 50px;
+    padding: 0;
+  }
+  .myBrand {
+    margin: 0.3em;
+    padding: 0.3em;
+  }
+}
