--- a/src/style.css
+++ b/src/style.css
@@ -24,11 +24,10 @@ body {
   z-index: 1;
 }
 
-#bm {
+.bm {
   width: 100%;
   height: 100%;
   position: absolute;
-  /* z-index:999; */
   top: 0;
   left: 0;
   right: 0;
