--- a/src/assets/style2.css
+++ b/src/assets/style2.css
@@ -9,144 +9,6 @@
 /*This is where the magic is. The process works by creating a div with a height and width of 100% of the window size. You then set that div's position to fixed so it's always in the right spot on loading. Give the div a background image of whatever you like*/
 
 /*To scroll with the page, just set the position to absolute instead of fixed*/
-#RABBOT {
-  background: url("../Projects/RABBOT/RABBOT_L.jpg") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#DiveIntoDigital {
-  background: url("../Projects/DiveIntoDigital/DiveIntoDigital_1.JPG") no-repeat
-    center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#TheHats {
-  background: url("../Projects/TheHats/TheHats_L.jpg") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#UniverseConcert {
-  background: url("../Projects/UniverseConcert/UniverseConcert_L.JPG") no-repeat
-    center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#Sleepers {
-  background: url("../Projects/Sleepers/Sleepers_L.JPG") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#MoonGaze {
-  background: url("../Projects/MoonGaze/MoonGaze_L.JPG") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#LovMeLovU {
-  background: url("../Projects/LovMeLovU/LovMeLovU_L.jpg") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#PollHuetion {
-  background: url("../Projects/PollHUEtion/PollHUEtion_L.JPG") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#Teleportation {
-  background: url("../Projects/Teleportation/Teleportation_L.jpg") no-repeat
-    center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#EmoLace {
-  background: url("../Projects/EmoLace/EmoLace_L.jpg") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#Mai {
-  background: url("../Projects/Mai/Mai_L.jpg") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#MaidenPink {
-  background: url("../Projects/MaidenPink/MaidenPink_L.jpg") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#CourseIcon {
-  background: url("../Projects/CourseIcon/CourseIcon_2.png") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#Leaflets {
-  background: url("../Projects/Leaflets/Trifold_Leaflet.jpg") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#ScholarshipPromotion {
-  background: url("../Projects/ScholarshipPromotion/ScholarshipPromotionPoster_3.jpg")
-    no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#Flyer {
-  background: url("../Projects/Flyer/Flyer_3.jpg") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#FloralWatercolour {
-  background: url("../Projects/FloralWatercolour/FloralWatercolour_3.jpg")
-    no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#DreamWorld {
-  background: url("../Projects/DreamWorld/DreamWorld_L.jpg") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-#CakeLogo {
-  background: url("../Projects/CakeLogo/mockup.jpg") no-repeat center;
-  background-size: cover;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
 
 /*The content underneath the div is positioned absolutely and has a large top offset of 100% which hides it below the full image. */
 #content {
@@ -288,7 +150,7 @@ video,
 .video-js,
 img.vjs-poster {
   width: 100% !important;
-  height: 100% !important; //these need !important because IE
+  height: 100% !important;
   max-width: 100%;
 }
 
