--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -121,7 +121,7 @@ h2 {
     rgba(0, 0, 0, 0) 0%,
     rgba(0, 0, 0, 0.49) 98%
   );
-  width: inherit;
+  width: calc(100% - 10px);
   height: 160px;
   opacity: 0;
   transform: translateY(30px);
