--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -464,6 +464,26 @@ a:hover {
   align-items: center;
 }
 
+.page-transition-enter {
+  transform: translate(100%);
+  position: absolute;
+}
+
+.page-transition-enter.page-transition-enter-active {
+  transform: translate(0%);
+  transition: transform 1s ease-in-out;
+}
+
+.page-transition-leave {
+  transform: translate(0%);
+  position: absolute;
+}
+
+.page-transition-leave.page-transition-leave-active {
+  transform: translate(-100%);
+  transition: transform 1s ease-in-out;
+}
+
 /*------------For mobile phones------------*/
 @media only screen and (max-width: 620px) {
   .wrapper,
