--- a/src/assets/style2.css
+++ b/src/assets/style2.css
@@ -25,6 +25,9 @@
   height: 100%;
   background-color: rgba(100, 100, 100, 0.45);
 }
+.cover {
+  object-fit: cover;
+}
 
 img.img_medium {
   display: block;
