--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -141,84 +141,16 @@ h2 {
   color: white;
   font-size: 0.8vw;
 }
-/*------------social media icons------------*/
-#img_yiyi {
-  position: absolute;
-  z-index: 4;
-  width: 50%;
-  height: auto;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-.About {
-  font-size: 1em;
-  padding-right: 10%;
-  margin-top: 2.5em;
-  margin-bottom: 2em;
-}
-#AboutContainer {
-  margin-top: 15%;
-}
-#AboutTextContainer {
-  position: absolute;
-  font-family: "Roboto", sans-serif;
-  color: white;
-  z-index: 5;
-  width: 50%;
-  left: 50%;
-  text-align: left;
+.about {
   line-height: 200%;
-  margin: 0, auto;
-  padding-left: 3%;
 }
-#introcontainer {
-  width: 100%;
-  text-align: center;
-  font-family: "Roboto", sans-serif;
+/*------------social media icons------------*/
+.socialbtns a {
+  color: white;
+  font-size: 1.8em;
 }
-a,
-a:hover {
-  text-decoration: none;
-}
-#icons {
-  position: absolute;
-  z-index: 3;
-  float: left;
-  text-align: center;
-  top: 90%;
-  left: 20%;
-}
-.socialbtns,
-.socialbtns ul,
-.socialbtns li {
-  margin: 0 auto;
-  padding: 5px;
-  padding-left: 0;
-}
-
-.socialbtns li {
-  list-style: none outside none;
-  display: inline-block;
-}
-
-.socialbtns .fa {
-  width: 40px;
-  height: 28px;
-  color: #000;
-  background-color: #fff;
-  border: 1px solid #000;
-  padding-top: 12px;
-  border-radius: 22px;
-  -moz-border-radius: 22px;
-  -webkit-border-radius: 22px;
-  -o-border-radius: 22px;
-}
-
-.socialbtns .fa:hover {
-  color: #fff;
-  background-color: #000;
-  border: 1px solid white;
+.socialbtns a:hover {
+  color: pink;
 }
 .footer {
   position: fixed;
@@ -232,7 +164,6 @@ a:hover {
   z-index: 3;
 }
 /*------------Name Animation------------*/
-
 .container {
   display: flex;
   justify-content: center;
