--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -26,7 +26,7 @@
   transform: translate(0, -100%);
   -webkit-backface-visibility: hidden;
 }
-a.menu-link {
+.menu-link {
   float: right;
   display: block;
 }
@@ -103,7 +103,7 @@ nav[role="navigation"] li a {
   margin-top: 13px;
 }
 @media screen and (min-width: 48.25em) {
-  a.menu-link {
+  .menu-link {
     display: none;
   }
   .js nav[role="navigation"] {
