--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -122,7 +122,7 @@ h2 {
     rgba(0, 0, 0, 0.49) 98%
   );
   width: calc(100% - 10px);
-  height: 160px;
+  height: auto;
   opacity: 0;
   transform: translateY(3rem);
   transition: 0.25s transform linear, 0.3s opacity ease-in-out;
